--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icons/icon-192x192.png" />
+    <link rel="icon" type="image/png" href="/PWA_NFC_Reader/icons/icon-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3b82f6" />
     <meta name="description" content="Convert NFC serial numbers to decimal format" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="manifest" href="/PWA_NFC_Reader/manifest.json" />
+    <link rel="apple-touch-icon" href="/PWA_NFC_Reader/icons/icon-192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="NFC Convert" />
@@ -36,7 +36,6 @@
         return 'not-installable';
       };
 
-      // Track successful installations
       window.addEventListener('appinstalled', () => {
         deferredPrompt = null;
         console.log('PWA was installed');
@@ -45,7 +44,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
+          navigator.serviceWorker.register('/PWA_NFC_Reader/sw.js')
             .then(registration => {
               console.log('SW registered:', registration);
             })
